app/components/Meme.module.css
.wrapper {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin-top: 3rem;
	background-color: var(--creamy-white);
}

.title {
	font-size: 2.4rem;
	font-weight: normal;
	position: relative;
	padding-bottom: 0.1rem;
	border-bottom: solid 1px var(--dark-brown);
}

.imageWrapper {
	display: block;
	width: 45%;
	height: 100%;
	border-radius: 0.8rem;
	overflow: hidden;
	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1), -10px 10px 10px gray;
	margin-top: 2.4rem;
}

.image {
	width: 100%;
	height: 100%;
	object-fit: cover;
	object-position: center;
}

.buttonsWrapper {
	margin-top: 1.6rem;
	width: 45%;
}

.button {
	font-family: var(--font-alkatra);
	font-size: 2.4rem;
	color: var(--dark-brown);
	width: 50%;
	padding: 1.2rem;
	background-color: transparent;
	border: none;
	transition: color 0.2s ease-in-out;
}

.button:hover {
	cursor: pointer;
	color: var(--orange);
}

.icon {
	padding-right: 0.8rem;
}


@media (max-width: 499px) {
	.imageWrapper {
		width: 80%;
	}
	.title {
		font-size: 2rem;
	}
	.buttonsWrapper {
		width: 80%;
	}
	.button {
		font-size: 2rem;
	}
}
@media (min-width: 500px) {
	.imageWrapper {
		width: 70%;
	}
	.title {
		font-size: 2rem;
	}
	.buttonsWrapper {
		width: 70%;
	}
	.button {
		font-size: 2rem;
	}
}
@media (min-width: 768px) {
	.imageWrapper {
		width: 60%;
	}
	.title {
		font-size: 2.6rem;
	}
	.buttonsWrapper {
		width: 60%;
	}
	.button {
		font-size: 2.6rem;
	}
}
@media (min-width: 992px) {
	.imageWrapper {
		width: 50%;
	}
	.title {
		font-size: 2.6rem;
	}
	.buttonsWrapper {
		width: 50%;
	}
	.button {
		font-size: 2.6rem;
	}
}
@media (min-width: 1200px) {
	.imageWrapper {
		width: 40%;
	}
	.title {
		font-size: 2.8rem;
	}
	.buttonsWrapper {
		width: 40%;
	}
	.button {
		font-size: 2.8rem;
	}
}
@media (min-width: 1400px) {
	.imageWrapper {
		width: 30%;
	}
	.title {
		font-size: 3rem;
	}
	.buttonsWrapper {
		width: 30%;
	}
	.button {
		font-size: 3rem;
	}
}

